# dory

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: arkworks_proof.rs  metal_crossover.rs  metal_fp.rs  metal_fp12.rs  metal_fp2.rs  metal_fp6.rs  metal_miller.rs  metal_msm.rs  metal_proof.rs  metal_vec_ops.rs  parallel_eval.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: basic_e2e.rs  homomorphic.rs  homomorphic_mixed_sizes.rs  metal_e2e.rs  non_square.rs  print_ast.rs  recursion.rs  zk_e2e.rs  zk_statistical.rs  zk_wrong_point.rs
hooks/: pre-commit
scripts/: install-hooks.sh
src/: error.rs  evaluation_proof.rs  lib.rs  messages.rs  proof.rs  reduce_and_fold.rs  setup.rs
src/backends/: arkworks.rs  blake2b_transcript.rs  mod.rs
src/backends/arkworks/: ark_cache.rs  ark_field.rs  ark_group.rs  ark_pairing.rs  ark_poly.rs  ark_proof.rs  ark_serde.rs  ark_setup.rs  ark_witness.rs  blake2b_transcript.rs  domain.rs  mod.rs  spongefish_codecs.rs
src/backends/metal/: config.rs  glv.rs  gpu.rs  mod.rs  pairing.rs
src/backends/metal/shaders/: ec.metal  fp.metal  msm.metal  vec_ops.metal
src/primitives/: arithmetic.rs  backend.rs  mod.rs  poly.rs  serialization.rs  transcript.rs
src/recursion/: ast.rs  backend.rs  challenges.rs  collection.rs  collector.rs  context.rs  hint_map.rs  input_provider.rs  mod.rs  parallel.rs  trace.rs  witness.rs
src/recursion/ast/: analysis.rs  core.rs  mod.rs  wiring.rs
tests/: metal.rs  test_arkworks.rs
tests/arkworks/: cache.rs  commitment.rs  evaluation.rs  homomorphic.rs  integration.rs  mod.rs  non_square.rs  recursion.rs  serialization.rs  setup.rs  soundness.rs  witness.rs  zk.rs  zk_statistical.rs
tests/metal_gpu/: ec.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fr.rs  miller.rs  mod.rs  msm.rs  multi_miller.rs  vec_ops.rs
