[workspace]
members = [".", "derive"]
resolver = "2"

[package]
name = "dory"
version = "0.1.0"
edition = "2021"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
]
license = "Apache-2.0 OR MIT"
description = "A high performance and modular implementation of the Dory polynomial commitment scheme."
repository = "https://github.com/a16z/dory"
exclude = [".github", "README.md"]


[features]
default = []
arkworks = [
    "dep:ark-bn254",
    "dep:ark-ec",
    "dep:ark-ff",
    "dep:ark-serialize",
    "dep:ark-std",
    "dep:blake2",
    "dep:digest",
    "dep:bincode",
    "dep:serde",
]

[dependencies]
thiserror = "2.0"
rand_core = "0.6"
dory-derive = { path = "derive" }

# Arkworks backend
ark-bn254 = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
blake2 = { version = "0.10", optional = true }
digest = { version = "0.10", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
