[workspace]
members = [".", "derive"]
resolver = "2"

[package]
name = "dory"
version = "0.1.0"
edition = "2021"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
]
license = "Apache-2.0 OR MIT"
description = "A high performance and modular implementation of the Dory polynomial commitment scheme."
repository = "https://github.com/a16z/dory"
exclude = [".github", "README.md"]


[features]
default = []
backends = ["arkworks"]
arkworks = [
    "dep:ark-bn254",
    "dep:ark-ec",
    "dep:ark-ff",
    "dep:ark-serialize",
    "dep:ark-std",
    "dep:blake2",
    "dep:digest",
    "dep:bincode",
    "dep:serde",
]
parallel = ["dep:rayon", "ark-ec?/parallel", "ark-ff?/parallel"]
cache = ["arkworks", "dep:once_cell", "parallel"]

[dependencies]
thiserror = "2.0"
rand_core = "0.6"
dory-derive = { path = "derive" }
tracing = "0.1"
dirs = "5.0"

# Arkworks backend
ark-bn254 = { version = "0.5.0", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-std = { version = "0.5", optional = true }
blake2 = { version = "0.10", optional = true }
digest = { version = "0.10", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
once_cell = { version = "1.20", optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "basic_e2e"
required-features = ["backends"]

[[example]]
name = "homomorphic"
required-features = ["backends"]

[[example]]
name = "non_square"
required-features = ["backends"]

[[bench]]
name = "arkworks_proof"
harness = false
required-features = ["backends", "cache", "parallel"]
